8339960: GenShen: Fix inconsistencies in generational Shenandoah behavior

Reviewed-by: wkemper